syntax = "proto3";
package com.xunleijr.game.vo ;
   
message MobileLoginResult{
    string code = 1 ;
    string msg = 2 ;
    int32 loginType = 3 ;
    string token = 4;
}