
syntax = "proto3";
package com.xunleijr.game.vo.updown;

message UpdownUserGuessResultResult {
    string type = 1 ;
    string code = 2;
    string msg = 3;
    int32 userId = 4;
    int32 result = 5;
    int32 totalScore = 6;
    int32 mode = 7;
}
